--- a/templates/warehousing/admin/content/hospital_departments.html
+++ b/templates/warehousing/admin/content/hospital_departments.html
@@ -98,7 +98,9 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Hospital Department Form</h4>
+                    <h4 class="modal-title">
+                        <i class= "fas fa-file-alt"></i>
+                        Hospital Department Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -153,7 +155,9 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Edit Hospital Department</h4>
+                    <h4 class="modal-title">
+                        <i class= "fas fa-file-alt"></i>
+                        Edit Hospital Department</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
