--- a/templates/warehousing/admin/content/suppliers.html
+++ b/templates/warehousing/admin/content/suppliers.html
@@ -101,7 +101,9 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Supplier Form</h4>
+                    <h4 class="modal-title">
+                        <i class= "fas fa-file-alt"></i>
+                        Supplier Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -162,7 +164,9 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Edit Supplier</h4>
+                    <h4 class="modal-title">
+                        <i class= "fas fa-file-alt"></i>
+                        Edit Supplier</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
