--- a/templates/warehousing/admin/content/supplies.html
+++ b/templates/warehousing/admin/content/supplies.html
@@ -106,7 +106,9 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Supply Form</h4>
+                    <h4 class="modal-title">
+                        <i class= "fas fa-file-alt"></i>
+                        Supply Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -230,7 +232,9 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Edit Supply Category</h4>
+                    <h4 class="modal-title">
+                        <i class= "fas fa-file-alt"></i>
+                        Edit Supply Category</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
