--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -53,6 +53,13 @@
         base_url = "localhost:8000/warehousing"
     </script>
 
+<style>
+.required-field::after {
+    content: "*";
+    color: red;
+    margin-left:2px
+}
+</style>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed user-select-none">
@@ -439,6 +446,30 @@
       "responsive": true,
     });
   });
+</script>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () 
+    {
+        'use strict'
+    
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+    
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+        .forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+            if (!form.checkValidity()) {
+                event.preventDefault()
+                event.stopPropagation()
+            }
+    
+            form.classList.add('was-validated')
+            }, false)
+        })
+    })()
 </script>
 
 <!-- BLOCK FOR PLUGINS JAVASCRIPT -->
