--- a/templates/warehousing/admin/default/base.html
+++ b/templates/warehousing/admin/default/base.html
@@ -1,6 +1,6 @@
 <script>
     var TOKEN = sessionStorage.getItem('TOKEN')
-    var LocalTOKEN = localStorage.getItem('TOKEN')
+    // var LocalTOKEN = localStorage.getItem('TOKEN')
     
     if(TOKEN == null || TOKEN == "")
     {
@@ -14,7 +14,6 @@
     
 <!-- ============================================================================== -->
 <!-- START HEADERRRRRRRRRRRR -->
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,6 +57,14 @@
         base_url = "localhost:8000/warehousing"
     </script>
 
+<style>
+.required-field::after {
+  content: "*";
+  color: red;
+  margin-left:2px
+}
+</style>
+
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed user-select-none">
@@ -73,7 +80,7 @@
   <!-- Top Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <!-- Left navbar links -->
-        <ul class="navbar-nav">
+        <!-- <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
@@ -83,7 +90,7 @@
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="#" class="nav-link">Contact</a>
             </li>
-        </ul>
+        </ul> -->
         <!-- /.navbar-nav -->
 
         <!-- Right navbar links -->
@@ -442,6 +449,30 @@
       "responsive": true,
     });
   });
+</script>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () 
+    {
+        'use strict'
+    
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+    
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+        .forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+            if (!form.checkValidity()) {
+                event.preventDefault()
+                event.stopPropagation()
+            }
+    
+            form.classList.add('was-validated')
+            }, false)
+        })
+    })()
 </script>
 
 <!-- BLOCK FOR PLUGINS JAVASCRIPT -->
